Fixed up display of .directions table: * base.css: Less padding in table cells (4px => 2px) * routes/show.html:   * Abbreviate continue to cont.   * Add spaces around dashes in street names that have dashes so they will     wrap

--- a/apps/web/tripplanner/branches/dojo/tripplanner/public/stylesheets/base.css
+++ b/apps/web/tripplanner/branches/dojo/tripplanner/public/stylesheets/base.css
@@ -283,7 +283,7 @@ div.region-ad {
 }
 .directions td {
   border: 1px solid #99b3cc;
-  padding: 4px;
+  padding: 2px;
   vertical-align: middle;
 }
 .directions div {
